// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-grid-size Renders \`field-grid-size\` with custom props 1`] = `
<widget-settings-item-stub
  eager="true"
>
  <c-column-size-field-stub
    mobile="true"
    tablet="true"
    value="12"
  />
</widget-settings-item-stub>
`;

exports[`field-grid-size Renders \`field-grid-size\` with default props 1`] = `
<widget-settings-item-stub
  eager="true"
>
  <c-column-size-field-stub />
</widget-settings-item-stub>
`;
